# gravioli

./: .gitignore  README  README.md  genpb_cpp.sh  gravioli.proto
client/: .gitignore  gravioli.go
client/network/: network.go
client/visualizer/: visualizer.go
clients/python/: client.py  requirements.txt
clients/python/fbs/game/: Planets.py
fbs/: makefile  planet.fbs  planet_generated.h  world_generated.h
fbs/game/: Planet.py
server/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  client.cpp  client.h  config.h.in  config.hpp.in  logger.cpp  logger.h  main.cpp  makefile  physics.h  server.cpp  server.h  splash.txt  world.cpp  world.h
server/include/: crypto.hpp  fbmessage.hpp  gravioliWebClient.hpp  gravioliWorld.hpp  greenwich.hpp  message.hpp  msgQueue.hpp  optional.hpp  player.hpp  playerProvider.hpp  runnable.hpp  serializableWorld.hpp  server.hpp  simpleMsgQueue.hpp  tools.hpp  user.hpp  userInputParser.hpp  webclient.hpp  world.hpp  worldInfoProvider.hpp  worldProperties.hpp
server/include/authentication/: requestHandler.hpp
server/include/httpserver/: connection.hpp  connectionManager.hpp  header.hpp  mimeType.hpp  reply.hpp  request.hpp  requestHandler.hpp  requestParser.hpp  server.hpp
server/include/server/: server.hpp  simpleMsgQueue.hpp
server/lib/: .gitignore
server/lib/SimpleLog/: logger.hpp
server/lib/SimpleLogger/: logger.hpp
server/res/: index.html  splash.txt
server/src/: acclogger.hpp  crypto.cpp  fbmessage.cpp  gravioliWebClient.cpp  gravioliWorld.cpp  greenwich.cpp  main.cxx  msgQueue.cpp  player.cpp  playerProvider.cpp  runnable.cpp  serializableWorld.cpp  server.cpp  server.hpp  simpleMsgQueue.cpp  tools.hpp  user.cpp  userInputParser.cpp  userInputParser.hpp  webclient.cpp  world.cpp  worldInfoProvider.cpp  worldProperties.cpp
server/src/authentication/: requestHandler.cpp
server/src/common/: greenwich.cpp  userInputParser.cpp
server/src/httpserver/: connection.cpp  connectionManager.cpp  mimeType.cpp  reply.cpp  requestParser.cpp
server/src/server/: crypto.cpp  crypto.hpp  greenwich.hpp  msgQueue.hpp  publisher.hpp  server.cpp  server.hpp  simpleMsgQueue.cpp
server/test/: byteMessage.hpp  helper.cpp  helper.hpp  main.cxx  testMsgQueue.hpp  testVector.hpp  testVectorParser.hpp  test_crypto.cpp  test_playerProvider.cpp  test_server.cpp  test_simpleMsgQueue.cpp  test_userInputParser.cpp
server/testing/: .test_physics.cpp.swp  test_physics.cpp  test_physics.sh
